# organism_ai

./: .dockerignore  .env.example  .env.production.example  .gitignore  .gitkeep  ARCHITECTURE_DECISIONS.md  ARCHITECTURE_DECISIONS_ARCHIVE.md  CLAUDE.md  CONTEXT.md  CONVENTIONS.md  Dockerfile  KP_Organism_AI_Artel.md  PROMPT_TEMPLATE.md  benchmark.py  benchmark_checks.py  bulgakov_allusions.pptx  docker-compose.yml  gsm_report.csv  main.py  naryad_shablon.md  organism_ai_roadmap.md  organism_architecture_principles.md  output.md  pre_commit_check.py  pyproject.toml  инфо.txt
.github/workflows/: ci.yml
api_public/: .env.example  README.md  app.py  auth.py  dedup.py  embeddings.py  rate_limit.py  requirements.txt  test_api.py  usage.py
api_public/static/: index.html  style.css
config/: settings.py
config/agents/: analyst_20260312_034828.json  analyst_20260316_101550.json  analyst_20260316_101835.json
config/dev_roles/: README.md  review_coordinator.md  reviewer_agents.md  reviewer_channels.md  reviewer_core.md  reviewer_docs.md  reviewer_infra.md  reviewer_memory.md  reviewer_quality.md  reviewer_self_improvement.md  reviewer_tools.md
config/jobs/: artel_zoloto.json
config/personality/: _capability_test.md  ai_media.md  analyst_20260312_034828.md  analyst_20260316_101550.md  analyst_20260316_101835.md  artel_zoloto.md  default.md
config/prompts/: causal_analyzer.txt  evaluator.txt  (+4 more)
data/: benchmark_results.json  heartbeat
sandbox/: Dockerfile
scripts/: backup.sh  code_health.py  deploy.sh  health_check.py  restore.sh
tests/: test_sandbox_isolation.py
(+100 files in other folders)
