@'
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "organism"
version = "0.1.0"
description = "Organism AI - personal AI executor for business"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "docker>=7.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/organism"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
'@ | Out-File -Encoding ASCII pyproject.toml